--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Publish Site
 
 on:
-  schedule:
-    - cron: "0 5 * * *"   # ~07:00 CET
   workflow_dispatch:
+  schedule:
+    - cron: "0 5 * * *"   # 07:00 CET giornaliero
   push:
     branches: ["main"]
 
@@ -23,14 +23,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Install Python deps
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Generate today's posts (2 articles)
+      - name: Generate posts
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
@@ -39,18 +39,19 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.133.0'
+          hugo-version: "0.133.0"
           extended: true
 
-            - name: Fetch Hugo theme (PaperMod)
+      - name: Fetch Hugo theme (PaperMod)
         run: |
           rm -rf themes/PaperMod
           git clone --depth=1 https://github.com/adityatelange/hugo-PaperMod themes/PaperMod
 
-      - name: Build site
-        run: hugo --minify -b "https://lfdario.github.io/site-automation-pro/"
+      - name: Build
+        run: |
+          hugo --minify -b "https://lfdario.github.io/site-automation-pro/"
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
