--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,10 @@ relativeURLs = false
 [pagination]
   pagerSize = 12
 
+[taxonomies]
+  category = "categories"
+  tag = "tags"
+
 [params]
   defaultTheme = "auto"
   ShowReadingTime = true
@@ -19,10 +23,10 @@ relativeURLs = false
   ShowCodeCopyButtons = true
   DateFormat = "02 Jan 2006"
   env = "production"
-  # Se hai GA4, inserisci il tuo Measurement ID qui sotto:
+  # Inserisci qui il tuo GA4 se lo hai
   # googleAnalytics = "G-XXXXXXXXXX"
 
-  homeInfoParams = { Title = "Guida Tech & AI — Italia", Content = "Guide pratiche su tecnologia, AI e risparmio digitale. Articoli nuovi ogni giorno, in italiano 🇮🇹." }
+  homeInfoParams = { Title = "Guida Tech & AI — Italia", Content = "Guide pratiche su tecnologia, AI e risparmio digitale. Articoli nuovi ogni giorno 🇮🇹." }
 
 [menu]
   [[menu.main]]
