--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,10 +2,10 @@ name: Publish Site
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 5 * * *"   # 07:00 CET (GitHub usa UTC)
   push:
     branches: ["main"]
+  schedule:
+    - cron: "0 5 * * *"   # 07:00 CET (GitHub usa UTC)
 
 concurrency:
   group: site-automation-pro-${{ github.ref }}
@@ -23,6 +23,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Show repo tree (quick sanity)
+        run: |
+          ls -la
+          echo "---- CONFIG FILES ----"
+          ls -la config* || true
+          [ -f site.yaml ] && echo "WARNING: site.yaml found!" || true
+          echo "---- HEAD OF config.toml ----"
+          head -n 50 config.toml || true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -42,37 +51,48 @@ jobs:
         run: |
           python -m scripts.generate_posts --count 6
 
-      # (Opzionale) Sanity check sulla chiave Unsplash
-      - name: Test Unsplash key (optional)
-        if: ${{ env.UNSPLASH_ACCESS_KEY != '' }}
-        run: |
-          CODE=$(curl -sS -o /dev/null -w "%{http_code}" \
-            -H "Authorization: Client-ID ${UNSPLASH_ACCESS_KEY}" \
-            "https://api.unsplash.com/search/photos?query=cars&per_page=1")
-          if [ "$CODE" != "200" ]; then
-            echo "Unsplash API check failed with HTTP $CODE"
-            exit 1
-          fi
-          echo "Unsplash API reachable ✅"
-
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: "0.146.0"
           extended: true
 
-      - name: Fetch Hugo theme (Blowfish)
+      - name: Fetch Hugo theme (Blowfish ONLY)
         run: |
-          rm -rf themes/blowfish
+          rm -rf themes/*            # 🔥 elimina qualunque tema residuo
           git clone --depth=1 https://github.com/nunocoracao/blowfish themes/blowfish
+          echo "Themes present:" && ls -la themes
 
-      - name: Clean Hugo resources
+      - name: Clean Hugo caches & dest
         run: |
-          rm -rf resources
+          rm -rf resources            # 🔥 rigenera asset fingerprintati
+          rm -rf public               # 🔥 svuota output precedente
+
+      - name: Print Hugo env & config
+        run: |
+          hugo env
+          echo "---- HUGO CONFIG (merged) ----"
+          hugo config | sed -n '1,200p'
+          echo "---- Searching for 'theme' in repo ----"
+          (git grep -n "theme =" || true)
+          (git grep -n "theme:" || true)
 
       - name: Build
+        env:
+          HUGO_ENV: production
         run: |
-          hugo --minify -b "https://lfdario.github.io/site-automation-pro/"
+          hugo --gc --minify --cleanDestinationDir \
+               -b "https://lfdario.github.io/site-automation-pro/"
+
+      - name: Inspect public (check asset paths)
+        run: |
+          echo "---- PUBLIC TOP ----"
+          ls -la public | head -n 200
+          echo "---- index.html HEAD ----"
+          sed -n '1,120p' public/index.html | sed -n '1,120p'
+          echo "---- Search for bad absolute paths ----"
+          (grep -Rho 'href="/[^"]\+\.css' public | head -n 20) || true
+          (grep -Rho 'src="/[^"]\+\.js' public | head -n 20) || true
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
